Add GET request parameters

--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 <p>Hello :)</p>
-<p><a href="/goodbye">Say goodbye</a> or <a href="/exit">Exit</a></p>
+<p>
+    <a href="/goodbye">Say goodbye</a> or
+    <a href="/exit">Exit</a> or
+    <a href="/hello?name=Anton&surname=Khaletski">Request with parameters</a>
+</p>
 </body>
 </html>
