--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -11,5 +11,6 @@
     <a href="/exit">Exit</a> or
     <a href="/hello?name=Anton&surname=Khaletski">Request with parameters</a>
 </p>
+<p th:text="${message}"/>
 </body>
 </html>
