Replace absolute page paths with relative

--- a/src/main/webapp/WEB-INF/views/first/goodbye.html
+++ b/src/main/webapp/WEB-INF/views/first/goodbye.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <p>Goodbye :(</p>
-<p><a href="/hello">Say hello</a> or <a href="/exit">Exit</a></p>
+<p><a href="hello">Say hello</a> or <a href="exit">Exit</a></p>
 </body>
 </html>
