--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -7,9 +7,9 @@
 <body>
 <p>Hello :)</p>
 <p>
-    <a href="/goodbye">Say goodbye</a> or
-    <a href="/exit">Exit</a> or
-    <a href="/hello?name=Anton&surname=Khaletski">Request with parameters</a>
+    <a href="goodbye">Say goodbye</a> or
+    <a href="exit">Exit</a> or
+    <a href="hello?name=Anton&surname=Khaletski">Request with parameters</a>
 </p>
 <p th:text="${message}"/>
 </body>
