Add PATCH and DELETE requests

--- a/src/main/webapp/WEB-INF/view/persons/showAllPersons.html
+++ b/src/main/webapp/WEB-INF/view/persons/showAllPersons.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 <div th:each="person : ${persons}">
-    <a th:href="@{persons/{id}(id=${person.getId()})}" th:text="${person.getName()}">USER</a>
+    <a th:href="@{/persons/{id}(id=${person.getId()})}" th:text="${person.getName()}">USER</a>
 </div>
+<hr>
+<a href="persons/new">Add person</a>
 </body>
 </html>
