--- a/src/main/webapp/WEB-INF/view/persons/showPerson.html
+++ b/src/main/webapp/WEB-INF/view/persons/showPerson.html
@@ -7,5 +7,9 @@
 <body>
 <p th:text="${person.getName()}">VALUE</p>
 <p th:text="${person.getId()}">VALUE</p>
+<p><a th:href="@{/persons/{id}/edit(id=${person.getId()})}">Edit</a></p>
+<form th:method="DELETE" th:action="@{/persons/{id}(id=${person.getId()})}">
+    <input type="submit" value="Delete">
+</form>
 </body>
 </html>
