--- a/src/main/webapp/WEB-INF/view/persons/editPerson.html
+++ b/src/main/webapp/WEB-INF/view/persons/editPerson.html
@@ -8,12 +8,15 @@
 <form th:method="PATCH" th:action="@{/persons/{id}(id=${person.getId()})}" th:object="${person}">
     <label for="name">Enter name: </label>
     <input type="text" th:field="*{name}" id="name">
+    <p style="color:darkred" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">NAME ERROR</p>
     <p/>
     <label for="age">Enter age: </label>
     <input type="text" th:field="*{age}" id="age">
+    <p style="color:darkred" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">AGE ERROR</p>
     <p/>
     <label for="email">Enter email: </label>
     <input type="text" th:field="*{email}" id="email">
+    <p style="color:darkred" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">EMAIL ERROR</p>
     <p/>
     <input type="submit" value="Update">
 </form>
